--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;600&display=swap");
 @import url("https://use.typekit.net/mwf7moh.css");
 @import "./variables";
-@import "./header";
-@import "./footer";
+@import "./shared/header";
+@import "./shared/footer";
 @import "./mission";
+@import "./main";
 
 @font-face {
   font-family: GothamMedium;
@@ -51,471 +52,3 @@ input {
   font-size: 17px;
   font-weight: 600;
 }
-/****************************************/
-.container {
-  position: relative;
-  top: 145px;
-  width: 100%;
-  img {
-    filter: brightness(75%);
-  }
-}
-/****************************************/
-.sousSlider {
-  position: relative;
-  display: flex;
-  align-items: center;
-  width: 68%;
-  height: 150px;
-  margin-left: auto;
-  margin-right: auto;
-  top: 80px;
-  z-index: 2;
-  background-color: white;
-  -webkit-box-shadow: 0px 0px 39px 0px rgba(110, 110, 110, 0.37);
-  box-shadow: 0px 0px 39px 0px rgba(110, 110, 110, 0.37);
-  .div_sv {
-    position: relative;
-    display: block;
-    width: 35px;
-    height: 35px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 15px;
-    .svg1,
-    .svg2,
-    .svg3 {
-      transition: all 0.5s ease;
-      fill: $vertClair;
-    }
-  }
-  .sousSlider_L {
-    height: 100%;
-    flex: 1;
-    text-align: center;
-    padding-top: 40px;
-    transition: all 0.5s ease;
-    cursor: pointer;
-    font-weight: 600;
-    img {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      margin-bottom: 5px;
-    }
-    a {
-      display: inline-block;
-      width: 150px;
-      margin-top: -10px;
-    }
-    a::after {
-      content: "\002192";
-      color: $vertClair;
-      margin-left: 2px;
-    }
-    &:hover {
-      background-color: $vertClair;
-    }
-  }
-  .sousSlider_M {
-    border-left: 1px solid #75787a;
-    border-right: 1px solid #75787a;
-    height: 100%;
-    flex: 1;
-    padding-top: 40px;
-    text-align: center;
-    transition: all 0.5s ease;
-    cursor: pointer;
-    font-weight: 600;
-    img {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      margin-bottom: 5px;
-    }
-    a::after {
-      content: "\002192";
-      color: $vertClair;
-      margin-left: 2px;
-    }
-    &:hover {
-      background-color: $vertClair;
-    }
-  }
-  .sousSlider_R {
-    height: 100%;
-    flex: 1;
-    padding-top: 40px;
-    text-align: center;
-    transition: all 0.5s ease;
-    cursor: pointer;
-    font-weight: 600;
-    img {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      margin-bottom: 5px;
-    }
-    a::after {
-      content: "\002192";
-      color: $vertClair;
-      margin-left: 2px;
-    }
-    &:hover {
-      background-color: $vertClair;
-    }
-  }
-}
-/****************************************/
-.bgGris {
-  padding-top: 80px;
-  background-color: $grisClair;
-  padding-bottom: 50px;
-  border-bottom: 1px solid #e2e2e2;
-}
-
-.lastNews_Titre {
-  position: relative;
-  text-align: center;
-  padding: 40px;
-
-  h3 {
-    color: #005052;
-    font-size: 35px;
-    font-family: League;
-    font-weight: 400;
-    &:after {
-      content: "";
-      background-color: $vertClair;
-      bottom: 20px;
-      height: 3px;
-      position: absolute;
-      left: 50%;
-      -webkit-transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
-      transform: translateX(-50%);
-      width: 60px;
-    }
-  }
-}
-
-.bgGris_listCards {
-  display: flex;
-  position: relative;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  margin-left: 15%;
-  margin-right: 15%;
-  margin-top: 50px;
-  .card {
-    position: relative;
-    width: 300px;
-    height: 540px;
-    -webkit-box-shadow: 0px 0px 39px 0px rgba(110, 110, 110, 0.37);
-    box-shadow: 0px 0px 39px 0px rgba(110, 110, 110, 0.37);
-    margin-bottom: 20px;
-    .titre {
-      padding-top: 30px;
-      padding-left: 30px;
-      display: block;
-      margin-bottom: 30px;
-      font-size: 14px;
-      font-weight: 600;
-    }
-    img {
-      width: 240px;
-      height: 180px;
-      margin-left: 30px;
-      margin-bottom: 30px;
-    }
-    .card_content {
-      margin-left: 30px;
-      margin-right: 30px;
-    }
-    .card_bot {
-      position: absolute;
-      bottom: 30px;
-      border-top: 1px solid #999c9e;
-      padding-top: 30px;
-      width: inherit;
-      a {
-        display: block;
-        margin-left: 30px;
-        font-size: 18px;
-        font-weight: 600;
-        &::after {
-          content: "\002192";
-          color: $vertClair;
-          margin-left: 5px;
-        }
-      }
-    }
-  }
-}
-/****************************************/
-.containt_investor {
-  background-color: white;
-  position: relative;
-  min-height: 800px;
-  .containt_investor_titre {
-    position: relative;
-    text-align: center;
-    padding: 40px;
-    h3 {
-      color: $vertFonce;
-      font-size: 35px;
-      font-family: League;
-      font-weight: 400;
-      &:after {
-        content: "";
-        background-color: $vertClair;
-        bottom: 20px;
-        height: 3px;
-        position: absolute;
-        left: 50%;
-        -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-        transform: translateX(-50%);
-        width: 60px;
-      }
-    }
-  }
-
-  .containt_investor_listCard {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 55%;
-    margin-left: auto;
-    margin-right: auto;
-    min-height: 500px;
-    .containt_investor_card {
-      position: relative;
-      width: 325px;
-      min-height: 480px;
-      padding: 25px;
-      color: $vertFonce;
-
-      .investor_card_titre {
-        position: relative;
-        display: flex;
-        padding-bottom: 20px;
-        margin-bottom: 20px;
-        border-bottom: 1px solid #f6f6f6;
-        color: #6c9a9b;
-        font-weight: 600;
-      }
-
-      .investor_card_containt_SharePrice {
-        p {
-          font-family: League;
-          font-weight: 400;
-          font-size: 60px;
-        }
-        span {
-          font-family: League;
-          font-weight: 400;
-          font-size: 40px;
-        }
-      }
-
-      .investor_card_containt {
-        margin-bottom: 20px;
-        padding-bottom: 20px;
-        border-bottom: 1px solid #f6f6f6;
-        p {
-          font-size: 16px;
-        }
-        .investor_card_date {
-          color: #bec5c9;
-        }
-        a {
-          text-decoration: underline;
-          font-size: 16px;
-        }
-        .investor_card_containt_titleInvest {
-          position: relative;
-          display: block;
-          font-size: 35px;
-          margin-bottom: 20px;
-          font-family: League;
-          font-size: 60px;
-          line-height: 50px;
-          font-weight: 400;
-        }
-        .investor_card_containt_investText {
-          color: #4c5f6a;
-          line-height: 25px;
-        }
-      }
-      .investor_card_containt_update {
-        color: #bec5c9;
-        border-bottom: 1px solid #f6f6f6;
-        margin-bottom: 20px;
-        padding-bottom: 20px;
-      }
-      .investor_card_bot {
-        a {
-          font-size: 16px;
-          font-weight: 600;
-        }
-        &::after {
-          content: "\002192";
-          color: $vertClair;
-          margin-left: 5px;
-        }
-      }
-    }
-  }
-
-  .investor_btn {
-    position: relative;
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    input {
-      background-color: $vertClair;
-      border-radius: 30px;
-      width: 325px;
-      height: 45px;
-      cursor: pointer;
-      transition: all 0.8s ease;
-      text-align: center;
-      &:hover {
-        background-color: #6ba717;
-      }
-    }
-  }
-}
-
-/****************************************/
-.video {
-  position: relative;
-  height: 600px;
-  background: url(../images/bg-video.jpg);
-  .containerVideo {
-    position: relative;
-    left: 24%;
-    top: 25%;
-    width: 60%;
-    color: white;
-    span {
-      color: #6ba717;
-    }
-    h2 {
-      margin-bottom: 15px;
-      margin-top: 5px;
-      width: 500px;
-      margin-bottom: 10px;
-      @include titreH2_blanc;
-    }
-    .containerVideo_Text {
-      color: #bec5c9;
-      width: 60%;
-      line-height: 25px;
-    }
-    input {
-      margin-top: 20px;
-      border-radius: 30px;
-      height: 55px;
-      width: 180px;
-      text-align: center;
-      background-color: $vertClair;
-      cursor: pointer;
-      transition: all 1s ease;
-      &:hover {
-        background-color: #6ba717;
-      }
-    }
-  }
-}
-/****************************************/
-.ourMission {
-  position: relative;
-  min-height: 440px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  .ourMission_L {
-    width: 22%;
-    color: $vertFonce;
-    font-weight: 600;
-    margin-right: 50px;
-    span {
-      display: block;
-      color: #4c5f6a;
-      margin-bottom: 5px;
-    }
-    p {
-      font-family: League;
-      font-size: 60px;
-      line-height: 50px;
-      font-weight: 400;
-    }
-    input {
-      margin-top: 20px;
-      border-radius: 30px;
-      height: 55px;
-      width: 180px;
-      text-align: center;
-      background-color: $vertClair;
-      cursor: pointer;
-      transition: all 1s ease;
-      &:hover {
-        background-color: #6ba717;
-      }
-    }
-  }
-  .ourMission_R {
-    width: 30%;
-    color: #4c5f6a;
-    p {
-      font-size: 16px;
-      line-height: 30px;
-      font-weight: 300;
-    }
-  }
-}
-/****************************************/
-.numberBot {
-  background-color: $grisClair;
-  color: $vertFonce;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  border-bottom: 1px solid #e2e2e2;
-  border-top: 1px solid #e2e2e2;
-  min-height: 320px;
-  .numberBot_Card {
-    position: relative;
-    display: block;
-    margin: 0 20px 0 20px;
-    top: 30%;
-    p {
-      width: 210px;
-    }
-    span {
-      min-width: 200px;
-      display: block;
-      font-size: 60px;
-      font-family: League;
-      margin-bottom: 10px;
-    }
-  }
-  .ppl:before {
-    content: url("../images/human.JPG");
-  }
-  .target:before {
-    content: url("../images/target.JPG");
-  }
-  .pizza:before {
-    content: url("../images/pizza.JPG");
-  }
-  .earth:before {
-    content: url("../images/earth.JPG");
-  }
-}
-
-/****************************************/
